Add some translation of languages using Wikipedia as source.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1450 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/spa/languages.yml
+++ b/config/locales/spa/languages.yml
@@ -1,6 +1,671 @@
+# Source: Wikipedia (http://en.wikipedia.org/wiki/ISO_639)
 spa:
   languages:
+    aan: 'Anambé'
+    aap: 'Arára, pará'
+    aar: 'Afar'
+    abk: 'Abjaso'
+    abq: 'Abaza'
+    adw: 'Amundava'
+    ady: 'Adigué'
+    afr: 'Afrikaans'
+    agu: 'Aguacateco'
+    agx: 'Aghul'
+    ait: 'Arikem'
+    aka: 'Acano'
+    akk: 'Acadio'
+    ako: 'Akurio'
+    akv: 'Akhvakh'
+    akz: 'Alabama'
+    alt: 'Altay'
+    ama: 'Amanayé'
+    amc: 'Amahuaca'
+    amh: 'Amárico'
+    ana: 'Andaquí'
+    anb: 'Andoa'
+    ani: 'Andí'
+    anm: 'Anal'
+    aoc: 'Pemón'
+    api: 'Apiacá'
+    apy: 'Apalaí'
+    aqc: 'Archi'
+    ara: 'Árabe'
+    arc: 'Arameo'
+    arg: 'Aragonés'
+    arh: 'Arhuaco'
+    arl: 'Arabela'
+    arn: 'Mapudungun'
+    arp: 'Arapaho'
+    arx: 'Aruá'
+    asb: 'Assiniboine'
+    asm: 'Asamés'
+    asn: 'Asuriní xingú'
+    ast: 'Asturiano'
+    asu: 'Asuriní'
+    atc: 'Atsawaka'
+    atr: 'Atruahí'
+    ava: 'Avaro'
+    avk: 'Kotava'
+    avs: 'Aushiri'
+    avv: 'Avá-canoeiro'
+    awa: 'Awadhi'
+    awb: 'Awá'
+    awe: 'Awetí'
+    awt: 'Araweté'
+    aym: 'Aimara'
+    aze: 'Azerbayano'
+    bak: 'Baskir'
+    ban: 'Balinés'
+    bar: 'Bávaro'
+    bbl: 'Bácico'
+    bdk: 'Budukh'
+    bej: 'Beja'
+    bel: 'Bielorruso'
+    bem: 'Bemba'
+    ben: 'Bengalí'
+    bgc: 'Haryanví'
+    bhb: 'Bhili'
+    bho: 'Bhojpurí'
+    bik: 'Bikol'
+    bis: 'Bislama'
+    bjj: 'Kanauji'
+    bkq: 'Bacairí'
+    bla: 'Pies negros'
+    bll: 'Biloxi'
+    bmr: 'Muinane'
+    bns: 'Bundeli'
+    boa: 'Bora'
+    bod: 'Tibetano'
+    bos: 'Bosnio'
+    bph: 'Botlikh'
+    bre: 'Bretón'
+    brn: 'Boruca'
+    brx: 'Bodo'
+    bsn: 'Barasana'
+    bul: 'Búlgaro'
+    byf: 'Beté'
+    bzd: 'Bribri'
+    caa: 'Chortí'
+    cad: 'Caddo'
+    cah: 'Cahuarano'
+    cak: 'Cakchiquel central'
+    cat: 'Catalán'
+    cax: 'Chiquitano'
+    cay: 'Cayuga'
+    cbc: 'Karapaná'
+    cbd: 'Carijona'
+    cbg: 'Chimila'
+    cbi: 'Chachi'
+    cbr: 'Kashibo-kakataibo'
+    cbs: 'Cashinahua'
+    ccr: 'Cacaopera'
+    cdz: 'Koda'
+    ceb: 'Cebuano'
+    ces: 'Checo'
+    cha: 'Chamorro'
+    chb: 'Chibcha'
+    che: 'Checheno'
+    chf: 'Chontal de Tabasco'
+    chh: 'Chinook'
+    chl: 'Cahuilla'
+    chm: 'Mari'
+    chn: 'Jerga chinook'
+    cho: 'Choctaw'
+    chr: 'Cheroqui'
+    chu: 'Eslavo eclesial'
+    chv: 'Chuvasio'
+    chy: 'Cheyén'
+    cic: 'Chickasaw'
+    cid: 'Chimariko'
+    cin: 'Cinta larga'
+    cip: 'Chiapaneco'
+    ciy: 'Chaima'
+    cji: 'Chamalal'
+    cjp: 'Cabécar'
+    cjs: 'Shor'
+    cku: 'Koasati'
+    cly: 'Chatino de la zona alta oriental'
+    cmn: 'Chino mandarín'
+    cod: 'Cocama-cocamilla'
+    cof: 'Colorado'
+    coj: 'Cochimí'
+    con: 'Cofán'
+    cop: 'Copto'
+    cor: 'Córnico'
+    cos: 'Corso'
+    coz: 'Chocho'
+    cre: 'Cree'
+    crh: 'Tártaro de Crimea'
+    cro: 'Crow'
+    csb: 'Casubio'
+    csi: 'Miwok costanoano'
+    csz: 'Coos'
+    cta: 'Chatino de Tataltepec'
+    ctp: 'Chatino de la zona alta occidental'
+    ctz: 'Chatino de Zacatepec'
+    cub: 'Cubeo'
+    cui: 'Cuiba'
+    cuo: 'Cumanagoto'
+    cup: 'Cupeño'
+    cya: 'Chatino de Nopala'
+    cym: 'Galés'
+    czn: 'Chatino de Zenzontepec'
+    dak: 'Dakota'
+    dan: 'Danés'
+    dar: 'Dargínico'
+    del: 'Delaware'
+    deu: 'Alemán'
+    dhv: 'Drehu'
+    dih: 'Kumiai'
+    div: 'Maldivo'
+    dlg: 'Dolgan'
+    dlm: 'Dalmático'
+    doi: 'Dogri'
+    dsb: 'Bajo sorbio'
+    dum: 'Neerlandés medio'
+    dzo: 'Dzongkha'
+    egy: 'Egipcio'
+    ell: 'Griego (moderno)'
+    elx: 'Elamita'
+    eme: 'Emerillon'
+    eml: 'Emiliano-romañolo'
     eng: 'Inglés'
+    enm: 'Inglés medio'
+    epo: 'Esperanto'
+    esq: 'Esselen'
+    est: 'Estonio'
+    eus: 'Euskera; vasco'
+    ewe: 'Efé'
+    ewo: 'Yaundé'
+    ext: 'Extremeño'
+    fan: 'Fangüé'
+    fao: 'Feroés'
+    fas: 'Persa'
+    fij: 'Fi(d)jiano'
+    fil: 'Filipino'
+    fin: 'Fin(land)és'
     fra: 'Francés'
+    frm: 'Francés medio'
+    fro: 'Francés antiguo'
+    frp: 'Franco-provenzal'
+    fur: 'Friulo'
+    gag: 'Gagauzo'
+    gdm: 'Laal'
+    gdo: 'Ghodoberi'
+    gez: 'Ge''ez'
+    gil: 'Gilbertés'
+    gin: 'Hinukh'
+    gla: 'Gaélico escocés'
+    gle: 'Irlandés'
+    glg: 'Gallego'
+    glv: 'Manés'
+    gnw: 'Guaraní boliviano occidental'
+    gon: 'Gondi'
+    got: 'Gótico'
+    grc: 'Griego antiguo'
+    grn: 'Guaraní'
+    gub: 'Guajajára'
+    guc: 'Wayúu'
+    gug: 'Guaraní paraguayo'
+    gui: 'Guaraní boliviano oriental'
+    guj: 'Guyaratí'
+    gum: 'Guambiano'
+    gun: 'Guaraní mbyá'
+    guo: 'Guayabero'
+    guq: 'Aché'
+    gvc: 'Guanano'
+    gvj: 'Guajá'
+    gvo: 'Gavião do Jiparaná'
+    gym: 'Ngäbere'
+    gyr: 'Guarayú'
+    hai: 'Haida'
+    hat: 'Criollo haitiano'
+    hau: 'Hausa'
+    haw: 'Hawaiano'
+    hbs: 'Serbocroata'
+    heb: 'Hebreo'
+    her: 'Herero'
+    hid: 'Hidatsa'
+    hil: 'Hiligainón'
+    hin: 'Hindi'
+    hix: 'Hixkaryána'
+    hmr: 'Hmar'
+    hne: 'Chhattisgarhí'
+    hoc: 'Ho'
+    hrv: 'Croata'
+    hsb: 'Alto sorbio'
+    hti: 'Hodï'
+    hto: 'Minica'
+    hun: 'Húngaro'
+    huu: 'Murui'
+    hux: 'Nipode'
+    huz: 'Hunzib'
+    hye: 'Armenio'
+    ibo: 'Igbo'
+    ido: 'Ido'
+    iku: 'Inuktitut'
+    ile: 'Interlingue'
+    ina: 'Interlingua'
+    ind: 'Indonesio'
+    inh: 'Inguso'
+    iow: 'Iowa-oto'
+    ipk: 'Inupiaq'
+    iqu: 'Iquito'
+    isc: 'Isconahua'
+    isl: 'Islandés'
+    ita: 'Italiano'
+    ite: 'Itene'
+    itk: 'Judeo-italiano'
+    ixc: 'Ixcateco'
+    izh: 'Ižoriano'
+    jav: 'Javanés'
+    jdt: 'Judeo-tat'
+    jor: 'Jorá'
     jpn: 'Japonés'
+    jpr: 'Judeo-persa'
+    jqr: 'Jaqaru'
+    jrb: 'Judeo-arabé'
+    jru: 'Japrería'
+    jua: 'Júma'
+    jun: 'Juang'
+    jup: 'Hupdë'
+    jur: 'Jurúna'
+    kaa: 'Karakalpako'
+    kab: 'Cabilio'
+    kal: 'Groenlandés'
+    kan: 'Canarés'
+    kap: 'Bezhta'
+    kas: 'Cachemir'
+    kat: 'Georgiano'
+    kau: 'Canurí'
+    kav: 'Katukína'
+    kay: 'Kamayurá'
+    kaz: 'Kazaj(i)o'
+    kbb: 'Kaxuiâna'
+    kbd: 'Cabardiano'
+    kbh: 'Camsá'
+    kca: 'Janti'
+    kdr: 'Karaim'
+    kek: 'Kekchí'
+    keo: 'Kákwâ'
+    kff: 'Koya'
+    kfk: 'Kinnauri'
+    kfp: 'Korwa'
+    kfq: 'Korku'
+    kgk: 'Kaiwá'
+    kgm: 'Karipúna'
+    kha: 'Jasí'
+    khm: 'Jemer'
+    khn: 'Jandeshi'
+    khr: 'Jaria'
+    khv: 'Khvarshi'
+    kic: 'Kikapú'
+    kik: 'Quicuyú'
+    kim: 'Tofa'
+    kin: 'Ruandés'
+    kio: 'Kiowa'
+    kir: 'Kirguís'
+    kjh: 'Jakas'
+    kjj: 'Khinalugh'
+    kla: 'Klamath-modoc'
+    klb: 'Kiliwa'
+    klj: 'Jalaj'
+    kmz: 'Idioma turco de Jorasán'
+    knd: 'Konda'
+    knt: 'Katukína'
+    kog: 'Cogui'
+    kok: 'Konkani'
+    kom: 'Komi'
+    kon: 'Kongo'
+    kor: 'Coreano'
+    kpj: 'Karajá'
+    kpn: 'Kepkiriwát'
+    kpt: 'Karata'
+    kpv: 'Ciriano'
+    krc: 'Karachay-balkar'
+    krl: 'Carelio'
+    kru: 'Curuj'
+    kry: 'Kryts'
+    ksk: 'Kansa'
+    ktn: 'Karitiâna'
+    ktx: 'Kaxararí'
+    kui: 'Kuikúro-kalapálo'
+    kum: 'Kumyko'
+    kuq: 'Karipuná'
+    kur: 'Kurdo'
+    kva: 'Bagvalal'
+    kxo: 'Kanoé'
+    kxu: 'Kui'
+    kyh: 'Karok'
+    kyr: 'Kuruáya'
+    kyz: 'Kayabí'
+    lad: 'Judeo-español'
+    lah: 'Lahnda'
+    lao: 'Laosiano'
+    lat: 'Latín'
+    lav: 'Letón'
+    lax: 'Tiwa'
+    lbe: 'Laco'
+    lbj: 'Ladakhi'
+    lep: 'Lepcha'
+    lez: 'Lezguio'
+    lif: 'Limbu'
+    lij: 'Ligur'
+    lin: 'Lingala'
+    lit: 'Lituano'
+    liv: 'Livonio'
+    lkt: 'Lakota'
+    lld: 'Ladino'
+    lmo: 'Lombardo'
+    loz: 'Lozi'
+    lre: 'Laurentiano'
+    ltz: 'Luxemburgués'
+    lug: 'Luganda'
+    lui: 'Luiseño'
+    lus: 'Lusai'
+    lzz: 'Lazo'
+    mag: 'Magahi'
+    mai: 'Maithili'
+    mal: 'Malayalam'
+    mar: 'Maratí'
+    mas: 'Massaï'
+    mav: 'Sateré-mawé'
+    mbc: 'Macusí'
+    mbj: 'Nadëb'
+    mbp: 'Malayo'
+    mbw: 'Maring'
+    mcb: 'Machiguenga'
+    mcd: 'Sharanahua'
+    mcf: 'Matsés'
+    mcg: 'Mapoyo'
+    mch: 'Maquiritare'
+    mdz: 'Suruí do Pará'
+    mez: 'Menominee'
+    mfy: 'Mayo'
+    mga: 'Irlandés medio'
+    mhq: 'Mandan'
+    mic: 'Micmac'
+    mik: 'Mikasuki'
+    miq: 'Miskito'
+    mkd: 'Macedonio'
+    mlg: 'Mal(a)gache'
+    mlt: 'Maltés'
+    mnd: 'Mondé'
+    mni: 'Manipurí'
+    mnr: 'Mono'
+    mns: 'Mansi'
+    mod: 'Mobilio'
+    moe: 'Montañés'
+    moh: 'Mohawk'
+    mon: 'Mongol'
+    mot: 'Barí'
+    mov: 'Mohave'
+    mpu: 'Makuráp'
+    mrc: 'Maricopa'
+    mri: 'Maorí'
+    msa: 'Malayo'
+    msp: 'Maritsauá'
+    mtn: 'Matagalpa'
+    mts: 'Yora'
+    mtz: 'Tacaneco'
+    mus: 'Maskoki'
+    mvc: 'Mam central'
+    mwl: 'Mirandés'
+    mwr: 'Marwari'
+    mxi: 'Mozárabe'
+    mxq: 'Mixe de Juquila'
+    mya: 'Birmano'
+    myp: 'Pirahã'
+    myu: 'Mundurukú'
+    myv: 'Mordvino'
+    mzo: 'Matipuhy'
+    nap: 'Napolitano'
+    nau: 'Nauruano'
+    nav: 'Navajo'
+    ncb: 'Nicobarés central'
+    ncz: 'Natchez'
+    nds: 'Bajo sajón'
+    nep: 'Nepalí'
+    nhd: 'Chiripá'
+    nld: 'Neerlandés'
+    nno: 'Noruego nynorsk'
+    nob: 'Noruego bokmål'
+    nog: 'Nogay'
+    non: 'Antiguo nórdico'
+    nor: 'Noruego'
+    nsk: 'Naskapi'
+    nso: 'Sepedi'
+    ntp: 'Tepehuano septentrional'
+    ntw: 'Nottoway'
+    nuc: 'Nukuini'
+    nya: 'Ñanya'
+    nym: 'Nyamwezi'
+    oca: 'Ocaina'
+    oci: 'Occitano'
+    oji: 'Ojibwa'
+    oma: 'Omaha-ponca'
+    omg: 'Omagua'
+    omu: 'Omurano'
+    one: 'Oneida'
+    ono: 'Onondaga'
+    ood: 'Pápago'
+    opt: 'Ópata'
+    ore: 'Orejón'
+    ori: 'Oriya'
+    orm: 'Oromo'
+    orw: 'Oro win'
+    osa: 'Osage'
+    osc: 'Osco'
+    oss: 'Oseto'
+    ota: 'Turco-otomano'
+    oym: 'Wayampi'
+    paf: 'Paranawát'
+    pah: 'Tenharim'
+    pan: 'Panyabí'
+    pao: 'Paiute septentrional'
+    pap: 'Papiamento'
+    pau: 'Palauano'
+    pav: 'Pakaásnovos'
+    paw: 'Pawnee'
+    pay: 'Pech'
+    pbc: 'Patamona'
+    pbh: 'Eñepa'
+    pcd: 'Picardo'
+    peo: 'Persa antiguo'
+    pev: 'Pémono'
+    phn: 'Fenicio'
+    pia: 'Pima bajo'
+    pie: 'Piro'
+    pig: 'Pisabo'
+    pir: 'Piratapuyo'
+    pjt: 'Pityantyatyara'
+    plo: 'Popoluca de Oluta'
+    pms: 'Piamontés'
+    pno: 'Panobo'
+    pnt: 'Póntico'
+    poc: 'Pokomam central'
+    pog: 'Potiguára'
+    pok: 'Pokangá'
+    pol: 'Polaco'
+    pon: 'Pohnpei'
+    poq: 'Popoluca de Texistepec'
+    por: 'Portugués'
+    pos: 'Popoluca de Sayula'
+    pot: 'Potawatomi'
+    ppi: 'Paipai'
+    prg: 'Prusiano (antiguo)'
+    pro: 'Provenzal antiguo'
+    psm: 'Pauserna'
+    pta: 'Pai tavytera'
+    pto: 'Zo''é'
+    pui: 'Puinave'
+    pur: 'Puruborá'
+    pus: 'Pastú'
+    pyn: 'Poyanáwa'
+    qua: 'Quapaw'
+    quc: 'Quiché central'
+    que: 'Quechua'
+    qya: 'Quenya'
+    raj: 'Rayastaní'
+    rem: 'Remo'
+    rma: 'Rama'
+    rmr: 'Caló'
+    roh: 'Retorrománico'
+    ron: 'Rumano'
+    run: 'Rundí'
+    ruo: 'Istrorrumano'
+    rup: 'Aromùnico'
+    ruq: 'Meglenorrumano'
+    rus: 'Ruso'
+    rut: 'Rutul'
+    sag: 'Sango'
+    sah: 'Yakuto'
+    san: 'Sánscrito'
+    sat: 'Santalí'
+    scl: 'Shina'
+    scn: 'Siciliano'
+    sco: 'Escocés'
+    see: 'Seneca'
+    sei: 'Seri'
+    sel: 'Selkup'
+    ser: 'Serrano'
+    sey: 'Secoya'
+    sga: 'Irlandés antiguo'
+    shp: 'Shipibo-conibo'
+    sht: 'Shasta'
+    sik: 'Sikiana'
+    sin: 'Cingalés'
+    sjw: 'Shawnee'
+    skc: 'Sauk'
+    skf: 'Sakirabiá'
+    slj: 'Salumá'
+    slk: 'Eslovaco'
+    slr: 'Salar'
+    slv: 'Esloveno'
+    smo: 'Samoano'
+    sna: 'Sonés'
+    snd: 'Sindí'
+    snh: 'Shinabo'
+    sni: 'Sensi'
+    snn: 'Siona'
+    som: 'Somalí'
+    sot: 'Sesotho'
     spa: 'Español'
+    sqi: 'Albanés'
+    sqn: 'Conestog'
+    srd: 'Sardo'
+    srn: 'Sranan'
+    srp: 'Serbio'
+    srq: 'Sirionó'
+    sru: 'Suruí'
+    ssw: 'Swati'
+    sto: 'Stoney'
+    sun: 'Sundanés'
+    sut: 'Subtiaba'
+    sux: 'Sumerio'
+    sva: 'Suano'
+    svr: 'Savara'
+    swa: 'Suahelí'
+    swe: 'Sueco'
+    tab: 'Tabassaran'
+    taf: 'Tapirapé'
+    tah: 'Tahitiano'
+    tam: 'Tamil'
+    tar: 'Tarahumara central'
+    tat: 'Tártaro'
+    tav: 'Tatuyo'
+    tbu: 'Tubar'
+    tcy: 'Tulu'
+    teb: 'Tetete'
+    tee: 'Tepehua de Huehuetla'
+    teh: 'Tehuelche'
+    tel: 'Telugú'
+    tep: 'Tepecano'
+    tew: 'Tewa'
+    tgk: 'Tayiko'
+    tgl: 'Tagalo(g)'
+    tha: 'Tailandés'
+    tig: 'Tigré'
+    tin: 'Tindi'
+    tir: 'Tigriña'
+    tit: 'Tinigua'
+    tiw: 'Tiwi'
+    tkf: 'Tukumanféd'
+    tkm: 'Takelma'
+    tkr: 'Tsakhur'
+    tlh: 'Klingon'
+    tli: 'Tlingit'
+    tly: 'Talish'
+    tmz: 'Tamanaku'
+    tnc: 'Tanimuca-retuarã'
+    ton: 'Tongano'
+    top: 'Totonaco de Papantla'
+    tpj: 'Tapieté'
+    tpk: 'Tupinikin'
+    tpn: 'Tupinambá'
+    tpp: 'Tepehua de Pisaflores'
+    tpr: 'Tuparí'
+    tpt: 'Tepehua de Tlachichilco'
+    tpw: 'Tupí'
+    tqb: 'Tembé'
+    trz: 'Toraz'
+    tsi: 'Tsimshian'
+    tsn: 'Setsuana'
+    tso: 'Tsonga'
+    tta: 'Tutelo'
+    tue: 'Tuyuka'
+    tuk: 'Turcomano'
+    tuo: 'Tucano'
+    tur: 'Turco'
+    tus: 'Tuscarora'
+    twi: 'Twi'
+    twt: 'Turiwára'
+    txi: 'Ikpeng'
+    tzz: 'Tzotzil zinacanteco'
+    uby: 'Ubijé'
+    udi: 'Udi'
+    udm: 'Udmurto'
+    uga: 'Ugarítico'
+    uig: 'Uigur'
+    ukr: 'Ucrani(an)o'
+    und: 'Indeterminada'
+    urb: 'Urubú-kaapor'
+    urd: 'Urdu'
+    urz: 'Uru-eu-wau-wau'
+    uzb: 'Uzbeco'
+    vap: 'Vaiphei'
+    vec: 'Veneciano'
+    ven: 'Venda'
+    vep: 'Vepsio'
+    vie: 'Vietnamita'
+    vls: 'Flamenco'
+    vol: 'Volapük'
+    vot: 'Votio'
+    was: 'Washo'
+    wic: 'Wichita'
+    wiy: 'Wiyot'
+    wol: 'Volofo'
+    wya: 'Wyandot'
+    wyr: 'Wayoró'
+    xal: 'Kalmyk'
+    xaw: 'Kawaiisu'
+    xbx: 'Xabixí'
+    xcu: 'Curonio'
+    xet: 'Xetá'
+    xfa: 'Falisco'
+    xgf: 'Gabrieleño-fernandeño'
+    xho: 'Xhosa'
+    xht: 'Hatti'
+    xip: 'Xipináwa'
+    xiy: 'Xipaya'
+    xmf: 'Mingrelio'
+    xmo: 'Morerebi'
+    xpo: 'Pochuteco'
+    xpu: 'Púnico'
+    xsr: 'Sherpa'
+    xsv: 'Sudoviano'
+    xtr: 'Tripuri'
+    xum: 'Umbro'
+    xur: 'Urartiano'
+    xzm: 'Zemgaliano'
+    xzp: 'Zapoteco antiguo'
