--- a/config/locales/fra/notifications.yml
+++ b/config/locales/fra/notifications.yml
@@ -19,6 +19,7 @@ fra:
     journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
     journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
     journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
+    mails_are_sent: 'Les courriels ont été envoyés'
     need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
     need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
     need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
