--- a/config/locales/spa/general.yml
+++ b/config/locales/spa/general.yml
@@ -57,6 +57,7 @@ spa:
     #>choices: 'Choix'
     close: 'Cerrar'
     #>consult: 'Consulter'
+    #>copy_of: 'Copie de {{source}}'
     #>create: 'Créer'
     #>delete: 'Supprimer'
     #>display: 'Afficher'
@@ -87,6 +88,7 @@ spa:
     #>letter_function_title: 'Chère Madame, Cher Monsieur'
     #>letter_introduction: 'Suite à notre conversation, je vous communique les éléments du devis.'
     #>lock: 'Verrouiller'
+    #>mail: 'Envoyer un e-mail'
     #>n: 'non'
     #>new: 'Nouveau...'
     #>next: 'Suivant'
@@ -365,12 +367,10 @@ spa:
         #>various: 'Opérations diverses'
     listing_node:
       #>add_filter: ' Ajouter un filtre '
-      #>all_columns: '--- Toutes les colonnes ---'
+      #>all_columns: '-- Toutes les colonnes --'
       #>columns: 'Colonnes'
-      #>reflections: 'Tables liées'
-    listing_nodes:
       comparators:
-        #>any: 'Aucune condition'
+        #>any: '-- Aucune condition --'
         #>begins: 'Commence par'
         #>begins_cs: 'Commence par (sensible à la casse)'
         #>contains: 'Contient'
@@ -396,6 +396,11 @@ spa:
         #>not_equal_cs: 'N''est pas égal à (sensible à la casse)'
         #>not_finishes: 'Ne se termine pas par'
         #>not_finishes_cs: 'Ne se termine pas par (sensible à la casse)'
+      comparison:
+        #>with_value: '{{comparator}} {{value}}'
+        #>without_value: '{{comparator}}'
+      #>reflections: 'Tables liées'
+    listing_nodes:
     observation:
       importances:
         #>important: 'Importante'
