--- a/config/locales/spa/notifications.yml
+++ b/config/locales/spa/notifications.yml
@@ -12,12 +12,14 @@ spa:
     #>changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel'
     #>closed_financialyears: 'L''exercice a été correctement clôturé'
     #>expired_session: 'Session expirée. Veuillez vous reconnecter.'
+    #>fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
     #>import_succeeded: 'Vos données ont été correctement importées '
     #>impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
     #>impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
     #>journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
     #>journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
     #>journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
+    #>mails_are_sent: 'Les courriels ont été envoyés'
     #>need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
     #>need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
     #>need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
