Add #107 evolution which permits to get lines without e-mail quickly.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1455 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -599,8 +599,8 @@ fra:
         true_value: 'VRAI'
     edit: 'Modifier'
     export: 'Exporter'
-    employee: 'Informations employé'
     example: 'Exemple&nbsp;: {{value}}'
+    extract: 'Extraire'
     filter: Filtrer
     finish: Terminer
     format_date:
@@ -614,7 +614,7 @@ fra:
     letter_function_title: 'Chère Madame, Cher Monsieur'
     letter_introduction: 'Suite à notre conversation, je vous communique les éléments du devis.'
     lock: 'Verrouiller'
-    mail: 'Envoyer un e-mail'
+    mail: 'Envoyer un courriel'
     n: non
     next: Suivant
     new: Nouveau...
