Begins to re-add journal print for #48. We also need to review journals and general_ledger.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1457 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -176,6 +176,8 @@ fra:
               filename: 'Bilan de l''exercice [code]'
             income_statement:
               filename: 'Compte de résultat de l''exercice [code]'
+            journal:
+              filename: '[name] (Journal)'
           management:
             sale_order:
               filename: 'Vente [number]'
