--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -88,6 +88,11 @@ fra:
         currency_id: 'Numéro de devise'
         currency_name: 'Nom de devise'
         currency_rate: 'Taux de devise'
+      document_configure:
+        title: 'Impression de documents comptables'
+        #>document_templates_load: # Potentially missing translation
+      _document_options:
+        period: 'Période'
       document_prepare:
         balance: 'Balance' #!
         general_ledger: 'Grand livre' #!
@@ -175,12 +180,12 @@ fra:
         title: 'Déclôture du {{name}}'
       journal_update:
         title: 'Modifier le journal : {{name}}'
-      _journals:
-        journal_detail: 'Cloturé au {{closed_on}}'
-        journal_name: '{{name}}'
       journals:
         title: 'Journaux'
         #>journal_create: # Potentially missing translation
+      _journals:
+        journal_detail: 'Cloturé au {{closed_on}}'
+        journal_name: '{{name}}'
       # Unfound view ./app/views/accountancy/_journals_find
       _journals_find:
         journal_id: 'Numéro de journal'
