--- a/config/locales/fra/prints/journal.xml
+++ b/config/locales/fra/prints/journal.xml
@@ -1,49 +1,51 @@
 <?xml version="1.0"?>
 <template title="Example" lang="fr" version="2.0">
    <infos>
-    <info name="authors">Vincent Mauget</info>
+    <info name="authors">Brice Texier</info>
   </infos>
   <parameters>
     <parameter name="journal" nature="journal"/>
     <parameter name="started_on" nature="date"/>
     <parameter name="stopped_on" nature="date"/>
-    <parameter name="entries" nature="entry"/> 
-    <parameter name="sum" nature="entry"/> 
   </parameters>
   <document unit="mm" size="10" title="journal.name">
     <page orientation="portrait" format="A4" margin="10mm">
       <part height="30mm">
 	<set>
-	  <text value="{{journal.company.name}}" bold="true" size="7mm"/>
+          <image value="{{journal.company.entity/photo}}" height="30mm">
+            <text value="{{journal.company.entity/full_name}}" size="16"/>
+          </image>
 	</set>
       </part>
       <part height="10mm">
 	<set>
-	  <text value="Journal {{journal.name}} pour la période du {{started_on}} au {{stopped_on}}" left="50%" align="center" bold="true"/>
+	  <text value="{{journal.name}} pour la période du {{started_on}} au {{stopped_on}} (en {{journal/currency/name}})" left="50%" align="center" width="150mm" bold="true" size="12"/>
 	</set>
       </part>
       
       <!-- Array of entries of the journal for the matching period -->
-      <table collection="entries" fixed="true">
-	<column label="Numéro" property="record/number" width="35mm" align="left"/>
-	<column label="Crée le" property="record/created_on" width="30mm"/>
-	<column label="Intitulé" property="name" width="40mm"/>
-	<column label="Numéro compte" property="account/number" width="45mm"/>
-	<column label="Débit" property="debit" width="20mm"/>
-	<column label="Crédit" property="credit" width="20mm"/>
+      <table collection="journal.entries_between(started_on, stopped_on)" fixed="true">
+	<column label="Créée le" property="record/created_on" width="25mm"/>
+	<column label="Numéro" property="record/number" width="20mm" align="left"/>
+	<column label="Intitulé" property="name" width="70mm"/>
+	<column label="Numéro compte" property="account/number" width="35mm"/>
+	<column label="Débit" property="currency_debit" width="20mm" numeric="money"/>
+	<column label="Crédit" property="currency_credit" width="20mm" numeric="money"/>
       </table>
       
       <!-- Sum -->
-      <part height="10mm">
-	<set left="130mm" top="4mm">
-	  <text value="Totaux" top="6mm" left="10mm"/>
-          <text value="{{sum[:debit]}}" top="6mm" left="30mm" align="right" bold="true"/>
-	  <text value="{{sum[:credit]}}" top="6mm" left="50mm" align="right" bold="true"/>
-	</set>
-        <set left="130mm" top="10mm">
-          <text value="Solde " top="4mm" left="10mm" align="right" bold="true" />
-	  <text value="{{sum[:balance]}}" top="4mm" left="30mm" align="right" />
-	</set>
+      <part height="14mm">
+        <set left="115mm">
+          <text value="Totaux ({{journal.currency.code}})" top="0.5mm" left="34mm" align="right" bold="true"/>
+          <text value="Solde ({{journal.currency.code}})" top="6mm" left="34mm" align="right" bold="true" size="11.5"/>
+          <text value="{{journal.entries_calculate(:balance, started_on, stopped_on)?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
+          <text value="{{journal.entries_calculate(:debit, started_on, stopped_on)?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
+          <text value="{{journal.entries_calculate(:credit, started_on, stopped_on)?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
+          <rectangle width="75mm" height="4mm" border="0.5 solid #000"/>
+          <rectangle width="75mm" height="7mm" border="0.5 solid #000" top="4mm"/>
+          <line path="35mm,0 ; 35mm,11mm" border="0.5 solid #000"/>
+          <line path="55mm,0 ; 55mm,4mm"  border="0.5 solid #000"/>
+        </set>
       </part>
          
     </page>
