Closes #48 evolution with cleaning document templates. Permits to add document_print to the menu again.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1458 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -36,7 +36,7 @@ fra:
         delivery_line:
           greater_than_undelivered_quantity: 'La quantité de produit {{product}} à livrer dépasse la quantité non livrée ({{maximum}}{{unit}})'
         entity:
-          missing_title: 'doit contenir la dénomination sociale "{{title}}"'
+          missing_title: '{{attribute}} doit contenir la dénomination sociale "{{title}}"'
           nature_do_not_allow_a_first_name: 'Le type "{{nature}}" sélectionné ne permet de renseigner un prénom'
         financialyear:
           attributes:
