--- a/config/locales/jpn/pack.accountancy.yml
+++ b/config/locales/jpn/pack.accountancy.yml
@@ -92,7 +92,6 @@ jpn:
         #>currency_name: 'Nom de devise'
         #>currency_rate: 'Taux de devise'
       document_configure:
-        #>title: 'Impression de documents comptables'
       _document_options:
         #>period: 'Période'
       document_prepare:
@@ -103,8 +102,7 @@ jpn:
         #>synthesis: 'Documents de synthèse'
         #>title: 'Choisissez le type de document à imprimer'
       document_print:
-        #>print: 'Impression'
-        #>title: 'Impression : {{value}}'
+        #>title: 'Impression de documents'
       draft_entries:
         #>accountize: 'Comptabiliser les écritures'
         #>title: 'Listing des écritures du brouillard'
@@ -197,12 +195,12 @@ jpn:
         #>dates: 'Saisissez les dates de début et de fin de la période'
         #>from: 'Période du'
         #>to: 'Au'
-      print_balance_sheet:
-        #>period: 'Période'
-        #>title: 'Impression du bilan'
       _print_balance_sheet:
         #>balance_sheet: 'Sélectionnez l''exercice'
         #>select_financialyear: 'Exercice'
+      print_balance_sheet:
+        #>period: 'Période'
+        #>title: 'Impression du bilan'
       print_by_financial_year:
         #>financial_id: 'Exercice comptable'
         #>financial_year_select: 'Sélectionnez l'' exercice comptable'
