--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -178,6 +178,10 @@ fra:
               filename: 'Compte de résultat de l''exercice [code]'
             journal:
               filename: '[name] (Journal)'
+            general_journal:
+              filename: 'Journal général'
+            general_ledger:
+              filename: 'Grand livre'
           management:
             sale_order:
               filename: 'Vente [number]'
@@ -340,14 +344,15 @@ fra:
         embankment: 'Remise de chèques'
         entity: 'Fiche relations'
         financialyear: 'Documents de synthèse'
-        ledger: 'Grand livre'
+        general_ledger: 'Grand livre'
         income_statement: 'Compte de résultat'
         inventory: 'Inventaire'
         invoice: 'Facture client'
         journal: 'Journal'
+        general_journal: 'Journal général'
         other: 'Autres'
         purchase_order: 'Commande fournisseur'
-        sale_order: 'Devis / Commande'
+        sale_order: 'Devis/Commande'
         stocks: 'État des stocks'
         transport: 'Transport'
     entity:
