--- a/config/locales/jpn/general.yml
+++ b/config/locales/jpn/general.yml
@@ -161,6 +161,10 @@ jpn:
           accountancy:
             balance_sheet:
               #>filename: 'Bilan de l''exercice [code]'
+            general_journal:
+              #>filename: 'Journal général'
+            general_ledger:
+              #>filename: 'Grand livre'
             income_statement:
               #>filename: 'Compte de résultat de l''exercice [code]'
             journal:
@@ -316,14 +320,15 @@ jpn:
         #>embankment: 'Remise de chèques'
         #>entity: 'Fiche relations'
         #>financialyear: 'Documents de synthèse'
+        #>general_journal: 'Journal général'
+        #>general_ledger: 'Grand livre'
         #>income_statement: 'Compte de résultat'
         #>inventory: 'Inventaire'
         #>invoice: 'Facture client'
         #>journal: 'Journal'
-        #>ledger: 'Grand livre'
         #>other: 'Autres'
         #>purchase_order: 'Commande fournisseur'
-        #>sale_order: 'Devis / Commande'
+        #>sale_order: 'Devis/Commande'
         #>stocks: 'État des stocks'
         #>transport: 'Transport'
       #>unvalid_nature: 'Votre type de modèle est incorrect. Vous devriez supprimer ce modèle et le réinstaller.'
