--- a/config/locales/fra/help/accountancy-account_update.txt
+++ b/config/locales/fra/help/accountancy-account_update.txt
@@ -1,3 +1,4 @@
-====== Comment modifier un compte comptable ======
-Remplisser le formulaire de modification de compte en renseignant bien le champ correspondant.
+====== Modifier un compte comptable ======
+
+Il est seulement possible de modifier le nom du compte. Cela est nécessaire pour garantir la validité des données comptables.
 
