--- a/config/locales/fra/help/accountancy-accounts.txt
+++ b/config/locales/fra/help/accountancy-accounts.txt
@@ -1,11 +1,10 @@
 ====== Comptes comptables ======
 
 ===== Qu'est-ce qu'un compte comptable~? =====
-Il s'agit d'un compte (bancaire ou autres ...) dans lequel sont enregistrés les évènements économiques et 
-financiers de l'entreprise. Un compte comptable est défini par un numéro et un intitulé en conformité avec le plan comptable général.
+Il s'agit d'un compte dans lequel sont enregistrés les évènements économiques et financiers de l'entreprise. Un compte comptable est défini par un numéro et un intitulé en conformité avec le plan comptable général.
 
-===== Gestion d'un compte comptable  =====
-Pour utiliser un compte comptable (durant la [[accountancy-entries|Gestion des écritures]] par-exemple), commencer par le [[accountancy-accounts_create|créer]]. Le compte créé apparaîtra dans le tableau des comptes. Par la suite, il vous sera possible de le [[accountancy-accounts_update|modifier]]{{theme:buttons/update.png|modifier}} ou même de le [[accountancy-accounts_delete|supprimer{{theme:buttons/delete.png|supprimer}}]], sous condition qu'il n'existe aucune écriture relative à ce compte.
+===== Gestion des comptes  =====
+Le plan de compte est extensible à volonté, vous pouvez [[>accountancy/account_create|rajouter]] autant de comptes que nécessaire. Par la suite, il vous sera possible de les [[accountancy-accounts_update|modifier {{theme:buttons/update.png}}]] ou même de les supprimer {{theme:buttons/delete.png|supprimer}} à condition qu'il n'existe aucune écriture relative à ce compte.
 
-===== Suppression de comptes comptables  =====
-**ATTENTION** : Actuellement, la suppression d'un compte qui possède des sous-comptes entraîne une erreur. 
+>>> Il est possible de créer des comptes en alpha-numérique à partir du 4ème caractère. 
+>>> Exemple~: 411MARTIN
