--- a/config/locales/fra/help/accountancy-bank_account_create.txt
+++ b/config/locales/fra/help/accountancy-bank_account_create.txt
@@ -1,7 +1,10 @@
 ====== Comment créer un compte bancaire ======
-Remplissez le formulaire de création du compte bancaire en renseignant tous les champs. Les liens **Nouveau** situés en face de chaque zone de sélection permettent de créer un [[accountancy-accounts_create|nouveau compte comptable]] ou un [[accountancy-journals_create|nouveau journal]]. Des boutons radio dans le formulaire permettent de choisir l'identification du compte bancaire soit par [[accountancy-bank_accounts|IBAN]] ou par [[accountancy-bank_accounts|RIB]]. Dans les deux cas, il faudra bien renseigner les champs demandés en respectant le format des codes (se documenter sur internet) sinon une erreur sera levée.
-A titre d'exemple, le code IBAN FR7613515280805137297872234 se traduit en RIB :
-  * code banque~: **13515**
-  * code guichet~: **28080**
-  * numéro de compte bancaire~: **51372978722**
-  * clé rib~: **34**
+Vous pouvez décrire le compte banciare et notamment la banque qui le gére. Ces informations pourront être affichées sur des documents tels que des remises en banque.
+
+Dans un deuxième temps, il faut renseigner les éléments du compte bancaire soit en renseignant directement le code IBAN soit en utlisant les champs classique d'un Relévé d'Indentité Bancaire. Dans tous les cas, les numéros de compte seront vérifié et le code IBAN final sera généré.
+
+À titre d'exemple, le code IBAN //FR76 1351 5280 8051 3729 7872 234// est le résultat du RIB suivant~:
+  - Code banque~: //13515//
+  - Code guichet~: //28080//
+  - Numéro de compte bancaire~: //51372978722//
+  - Clé RIB~: //34//
